--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Josefin Sans', sans-serif;
 }
 main {
     display: flex;
@@ -22,7 +23,17 @@ main {
     align-self: flex-start;
 }
 h1 {
+    margin-top: 0;
     margin-right: auto;
+    font-size: 4.5rem;
+    line-height: 1;
+    letter-spacing: 15px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+h1 span {
+    font-weight: 300;
+    color: hsl(0, 36%, 70%);
 }
 form {
     align-self: flex-start;
