--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ main {
     background-repeat: no-repeat;
     background-image: linear-gradient(hsl(0, 0%, 100%), hsl(0, 100%, 98%));
 }
-#contentContainer img {
+#contentContainer .logo {
     padding-top: 5rem;
     padding-bottom: 8rem;
     align-self: flex-start;
@@ -25,8 +25,9 @@ main {
 h1 {
     margin-top: 0;
     margin-right: auto;
+    margin-bottom: 0;
     font-size: 4.5rem;
-    line-height: 1;
+    line-height: 1.2;
     letter-spacing: 15px;
     font-weight: 400;
     text-transform: uppercase;
@@ -34,6 +35,28 @@ h1 {
 h1 span {
     font-weight: 300;
     color: hsl(0, 36%, 70%);
+}
+p {
+    padding-bottom: 1.5rem;
+    line-height: 2;
+    color: hsl(0, 36%, 70%);
+}
+button {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    position: absolute;
+    left: 34.5rem;
+    height: 3.5rem;
+    width: 6rem;
+    border-radius: 2rem;
+    border: none;
+    background: linear-gradient(hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+}
+
+input {
+    height: 3.2rem;
+    width: 25rem;
+    border-radius: 2rem;
+    border: 1px solid hsl(0, 36%, 70%);
 }
 form {
     align-self: flex-start;
