--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 15rem 10rem 15rem;
+    padding: 0 15rem 0 15rem;
     background-image: url(/images/bg-pattern-desktop.svg);
     background-position: left;
     background-size:cover;
@@ -18,9 +18,13 @@ main {
     background-image: linear-gradient(hsl(0, 0%, 100%), hsl(0, 100%, 98%));
 }
 #contentContainer .logo {
-    padding-top: 5rem;
-    padding-bottom: 8rem;
+    padding-top: 4rem;
+    padding-bottom: 7rem;
     align-self: flex-start;
+}
+#containerImg img{
+    height: 100%;
+    width: auto;
 }
 h1 {
     margin-top: 0;
@@ -44,8 +48,8 @@ p {
 button {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     position: absolute;
-    left: 34.5rem;
-    height: 3.5rem;
+    left: 36.25rem;
+    height: 3.4rem;
     width: 6rem;
     border-radius: 2rem;
     border: none;
@@ -58,6 +62,10 @@ input {
     border-radius: 2rem;
     border: 1px solid hsl(0, 36%, 70%);
 }
+
 form {
     align-self: flex-start;
+}
+form input {
+    padding-left: 2rem;
 }
