--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 15rem 0 15rem;
+    padding: 0 13rem 0 13rem;
     background-image: url(/images/bg-pattern-desktop.svg);
     background-position: left;
     background-size:cover;
@@ -22,15 +22,18 @@ main {
     padding-bottom: 7rem;
     align-self: flex-start;
 }
+#containerImg {
+    width: 90rem;
+}
 #containerImg img{
+    width: 100%;
     height: 100%;
-    width: auto;
 }
 h1 {
     margin-top: 0;
     margin-right: auto;
     margin-bottom: 0;
-    font-size: 4.5rem;
+    font-size: 4rem;
     line-height: 1.2;
     letter-spacing: 15px;
     font-weight: 400;
