--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ form p {
     border: 1px red solid;
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (min-width: 375px) {
     main {
       flex-direction: column-reverse;
     }
@@ -95,21 +95,39 @@ form p {
     } 
     #containerImg .mobileImg {
         display: block;
-        width: 5rem;
-        height: 5rem;
+        width: 100%;
     }
     #contentContainer {
         padding: 0;
         text-align: center;
+        height: 100vh;
+        background-color: hsl(0, 100%, 98%);
+        background-image: none;
     }
     button {
         position: absolute;
-        left: 15.7rem;
+        left: 15.rem;
+        width: 4.5rem;
     }
     input {
         width: 18rem;
     }
     form {
         margin: 0 auto;
+        position: relative;
     }
+    #contentContainer .logo {
+        padding-bottom: 2rem;
+        padding-left: 2rem;
+        padding-top: 2rem;
+        width: 30%;
+    }
+    h1 {
+        font-size: 2.5rem;
+        margin: 4rem 0 0 0;
+    }
+    p {
+        padding: 0 2rem 1.5rem 2rem;
+    }
+
   }
