--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     box-sizing: border-box;
     font-family: 'Josefin Sans', sans-serif;
+    height: 100vh;
 }
 main {
     display: flex;
@@ -21,13 +22,14 @@ main {
     padding-bottom: 7rem;
     align-self: flex-start;
 }
-#containerImg {
-    width: 90rem;
-}
-#containerImg img{
-    width: 100%;
+#containerImg .deskImg {
     height: 100%;
+    width: auto;
+    display: block;
 }
+#contentContainer .mobileImg {
+    display: none;
+} 
 h1 {
     margin-top: 0;
     margin-right: auto;
@@ -51,7 +53,7 @@ button {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     position: absolute;
     left: 36.25rem;
-    height: 3.4rem;
+    height: 3.22rem;
     width: 6rem;
     border-radius: 2rem;
     border: none;
@@ -59,7 +61,7 @@ button {
 }
 
 input {
-    height: 3.2rem;
+    height: 3rem;
     width: 25rem;
     border-radius: 2rem;
     border: 1px solid hsl(0, 36%, 70%);
@@ -86,31 +88,32 @@ form p {
     border: 1px red solid;
 }
 
-@media only screen and (min-width: 375px) {
+@media only screen and (max-width: 600px) {
     main {
       flex-direction: column-reverse;
     }
     #containerImg .deskImg {
         display: none;
     } 
-    #containerImg .mobileImg {
-        display: block;
+    #contentContainer .mobileImg {
         width: 100%;
-    }
+        height: auto;
+        display: block;
+    } 
     #contentContainer {
         padding: 0;
         text-align: center;
-        height: 100vh;
         background-color: hsl(0, 100%, 98%);
         background-image: none;
     }
     button {
         position: absolute;
-        left: 15.rem;
+        left: 15.8rem;
         width: 4.5rem;
     }
     input {
         width: 18rem;
+        margin-bottom: 5rem;
     }
     form {
         margin: 0 auto;
