--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ input {
     width: 25rem;
     border-radius: 2rem;
     border: 1px solid hsl(0, 36%, 70%);
+    outline: none;
 }
 
 form {
@@ -72,11 +73,12 @@ form {
 }
 form input {
     padding-left: 2rem;
-    color: hsl(0, 36%, 70%);
     font-size: 0.9rem;
     background-color: #fff7f7;
+    background: url(images/icon-error.svg) no-repeat scroll 19rem;
 }
-form p {
+
+#formErrMsg {
     padding-left: 2rem;
     color:  hsl(0, 93%, 68%);
     margin-top: 5px;
@@ -87,6 +89,10 @@ form p {
 .formErr {
     border: 1px red solid;
 }
+.iconErr {
+padding-right: 2rem;
+}
+
 
 @media only screen and (max-width: 600px) {
     main {
@@ -114,6 +120,9 @@ form p {
     input {
         width: 18rem;
         margin-bottom: 5rem;
+    }
+    form input {
+        background: url(images/icon-error.svg) no-repeat scroll 14rem;
     }
     form {
         margin: 0 auto;
